--- a/Makefile.in
+++ b/Makefile.in
@@ -30,3 +30,6 @@ distclean:
 	@(cd src && $(MAKE) distclean)
 	/bin/rm -f Makefile config.cache config.log configure.lineno
 	/bin/rm -rf autom4te.cache
+
+rpm: shush
+	fpm -f -s dir -t rpm -n shush -v 1.2.3 ./src/shush=/usr/bin/ ./shush.1=/usr/share/man/
